# generative-ai-rust

./: .gitignore  Cargo.toml  README.md
examples/simple-config/: Cargo.toml
examples/simple-config/src/: main.rs
examples/simple-embedding/: Cargo.toml
examples/simple-embedding/src/: main.rs
examples/simple-text/: Cargo.toml
examples/simple-text-and-images/: Cargo.toml
examples/simple-text-and-images/src/: main.rs
examples/simple-text/src/: main.rs
generative-ai/: Cargo.toml
generative-ai/src/: error.rs  gen_ai.rs  lib.rs  model.rs
generative-ai/src/helper/: request.rs
generative-ai/src/types/: contents.rs  enum_types.rs  mod.rs  requests.rs  responses.rs
