[package]
name = "generative-ai"
version = "0.1.0"
authors = ["KhacVy"]
categories = []
keywords = []
description = "Rust library for Google AI"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/trankhacvy/generative-ai-rust"
repository = "https://github.com/trankhacvy/generative-ai-rust"


[dependencies]
futures = "0.3.30"
reqwest = {version = "0.11.23", features = ["json", "stream"]}
serde = { version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = {version = "1.35.1"}
