[package]
name = "simple-text-and-images"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generative-ai = {path = "../../generative-ai"}
tokio = { workspace = true }
dotenv = { workspace = true }
base64 = "0.21.6"
serde = { version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"